llvm-toolchain-snapshot (1:3.7~svn231060-1~exp2) UNRELEASED; urgency=medium

  * Reflect upstream changes wrt vim package. Split the files into different
    directories
  * Disable the patch force-gcc-header-obj.diff. Seems to cause bug #23556
  * Fix the CMake build. thanks to Paweł Bylica for the fix.
    Fix upstream bug #23352

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 21 Apr 2015 09:41:41 +0200

llvm-toolchain-snapshot (1:3.7~svn231060-1~exp1) experimental; urgency=medium

  * New snapshot release
  * Force the version of clang in the analyzer scripts
    clang-analyzer-force-version.diff

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 03 Mar 2015 09:19:38 +0100

llvm-toolchain-snapshot (1:3.7~svn230857-1) unstable; urgency=medium

  * New snapshot release
  * Support of gcc 5.0 (Closes: #777988)
  * compiler-rt-i586.diff: fix a build issue of compiler-rt under i386
  * lldb-gdbserver & lldb-platform have been merged into lldb-server
  * Bring back polly and remove libcloog-isl-dev & libisl-dev as build deps
    (shipped in the polly source tree)
  * Set the correct conflicts (Closes: #777580, #777581, #777582)
  * lit-lang.diff: Force the call to ld to be in english
    (was failing with a french locale)
  * silent-MCJIIT-tests.diff: enable some tests and silents some other

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 28 Feb 2015 18:44:59 +0100

llvm-toolchain-snapshot (1:3.7~svn227076-1) unstable; urgency=medium

  * New snapshot release
  * Switch to version 3.7
  * Standards-Version updated to 3.9.6

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 26 Jan 2015 09:23:41 +0100

llvm-toolchain-snapshot (1:3.6~svn224810-1) unstable; urgency=medium

  * New snapshot release
  * Update library filename declaration 3.5 => 3.6 (Closes: #772006)

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 05 Dec 2014 17:46:56 -0800

llvm-toolchain-snapshot (1:3.6~svn221998-1~exp1) experimental; urgency=medium
