@@ -1,3 +1,1 @@
-usr/lib/llvm-@LLVM_VERSION@/docs/llvm/html/clang/manpage.css
-usr/lib/llvm-@LLVM_VERSION@/docs/llvm/html/clang/clang.html
-usr/lib/llvm-@LLVM_VERSION@/docs/llvm/ps/clang.ps
+usr/lib/llvm-@LLVM_VERSION@/docs/llvm/html/
