@@ -1,4 +1,4 @@
-build-llvm/tools/clang/docs/tools/clang-@LLVM_VERSION@.1
+#build-llvm/tools/clang/docs/tools/clang-@LLVM_VERSION@.1
 clang/tools/scan-build/scan-build-@LLVM_VERSION@.1
 debian/man/clang-check-@LLVM_VERSION@.1
 debian/man/clang-tblgen-@LLVM_VERSION@.1
