@@ -15,6 +15,9 @@ endif
 
 VENDOR=$(shell lsb_release -is)
 
+AUTOCONF_BUILD=yes
+BUILD_DIR=Release
+
 DEB_HOST_MULTIARCH  = $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 DEB_HOST_GNU_TYPE   = $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_HOST_ARCH_BITS  = $(shell dpkg-architecture -qDEB_HOST_ARCH_BITS)
@@ -188,25 +191,33 @@ override_dh_auto_configure: preconfigure
 
 	# Due to bug upstream, no symlink here
 	cp -R -H clang-tools-extra tools/clang/tools/extra
-# Start the actual configure
-	cd $(TARGET_BUILD) && $(PRE_PROCESS_CONF) \
-	  ../configure $(confargs) \
-	--prefix=/usr/lib/llvm-$(LLVM_VERSION) \
-	--bindir=\$${prefix}/bin/ \
-	--disable-assertions \
-	--enable-shared \
-	--enable-optimized \
-	--with-optimize-option=' $(opt_flags)' \
-	--enable-pic \
-	--enable-libffi \
-	--libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH) \
-	--with-binutils-include=/usr/include \
-	--with-cloog --with-isl \
-	--with-bug-report-url=http://bugs.debian.org/ \
-	--enable-shared \
-        --disable-bindings \
-	$(CONFIGURE_EXTRA) \
-	CLANG_VENDOR=$(VENDOR) || { cat config.log tools/polly/config.log; exit 1; }
+
+	if test $(AUTOCONF_BUILD) = yes; then \
+		cd $(TARGET_BUILD); \
+		$(PRE_PROCESS_CONF) \
+		../configure $(confargs) \
+		--prefix=/usr/lib/llvm-$(LLVM_VERSION) \
+		--bindir=\$${prefix}/bin/ \
+		--disable-assertions \
+		--enable-shared \
+		--enable-optimized \
+		--with-optimize-option=' $(opt_flags)' \
+		--enable-pic \
+		--enable-libffi \
+		--libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH) \
+		--with-binutils-include=/usr/include \
+		--with-cloog --with-isl \
+		--with-bug-report-url=http://bugs.debian.org/ \
+		--enable-shared \
+	        --disable-bindings \
+		$(CONFIGURE_EXTRA) \
+		CLANG_VENDOR=$(VENDOR) || { cat config.log tools/polly/config.log; exit 1; }; \
+	else \
+		cd $(TARGET_BUILD) && \
+		cmake ../ \
+		-DCMAKE_INSTALL_PREFIX=/usr/lib/llvm-$(LLVM_VERSION) \
+		-DCMAKE_VERBOSE_MAKEFILE=ON -DBUILD_SHARED_LIBS=on; \
+	fi
 #	cd $(TARGET_BUILD) && cmake ../ -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_VERBOSE_MAKEFILE=ON
 #	mkdir build-compiler-rt && cd build-compiler-rt && cmake ../compiler-rt
 #        --with-ocaml-libdir=/usr/lib/ocaml/llvm-$(LLVM_VERSION) \
@@ -250,14 +261,16 @@ build_doc:
 	CMDS="llvm-dwarfdump llvm-mc llvm-mcmarkup llvm-objdump llvm-rtdyld llvm-size llvm-tblgen llvm-ranlib macho-dump lldb clang-format clang-modernize clang clang-tblgen clang-check clang-tidy clang-apply-replacements pp-trace"; \
 	for f in $$CMDS; do \
 		echo "Generating manpage of $$f"; \
-		LD_LIBRARY_PATH=$(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/lib/ help2man --no-discard-stderr --version-string=$(LLVM_VERSION) $(TARGET_BUILD)/Release/bin/$$f > debian/man/$$f-$(LLVM_VERSION).1; \
+		LD_LIBRARY_PATH=$(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/lib/ help2man --no-discard-stderr --version-string=$(LLVM_VERSION) $(TARGET_BUILD)/$(BUILD_DIR)/bin/$$f > debian/man/$$f-$(LLVM_VERSION).1; \
 	done
 
 override_dh_auto_install:
 	$(MAKE) -C $(TARGET_BUILD) VERBOSE=1 install DESTDIR=$(DEB_INST)/
 
-	chrpath -d $(TARGET_BUILD)/Release/bin/clang
-	chrpath -d `find $(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/bin/ -type f -executable`
+	chrpath -d $(TARGET_BUILD)/$(BUILD_DIR)/bin/clang
+	# Only run on executable, not script
+	chrpath -d `find $(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/bin/ -type f -executable -exec file -i '{}' \; | grep 'x-executable; charset=binary'|cut -d: -f1`
+
 
 # Add the trailing soname
 	mv $(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/lib/libLLVM-$(LLVM_VERSION).so $(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/lib/libLLVM-$(LLVM_VERSION).so.$(SONAME_EXT)
@@ -300,7 +313,7 @@ override_dh_auto_install:
 	done
 
 # Rename some stuff with the version name
-	cp $(CURDIR)/$(TARGET_BUILD)/tools/clang/docs/tools/clang.1 $(CURDIR)/$(TARGET_BUILD)/tools/clang/docs/tools/clang-$(LLVM_VERSION).1
+#	cp $(CURDIR)/$(TARGET_BUILD)/tools/clang/docs/tools/clang.1 $(CURDIR)/$(TARGET_BUILD)/tools/clang/docs/tools/clang-$(LLVM_VERSION).1
 
 	cp $(CURDIR)/clang/tools/scan-build/scan-build.1 $(CURDIR)/clang/tools/scan-build/scan-build-$(LLVM_VERSION).1
 
@@ -332,7 +345,7 @@ override_dh_auto_install:
 	sed -i 's|LLVM_CMAKE_DIR "/usr/lib/llvm-$(LLVM_VERSION)/share/llvm/cmake"|LLVM_CMAKE_DIR "/usr/share/llvm-$(LLVM_VERSION)/cmake"|' $(DEB_INST)/usr/lib/llvm-$(LLVM_VERSION)/share/llvm/cmake/LLVMConfig.cmake
 
 # Managed in lldb-X.Y.links.in
-	rm -f $(CURDIR)/$(TARGET_BUILD)/Release/lib/python*/site-packages/lldb/_lldb.so
+	rm -f $(CURDIR)/$(TARGET_BUILD)/$(BUILD_DIR)/lib/python*/site-packages/lldb/_lldb.so
 
 # Manage the polly files. Sometimes, we build them. Sometimes not.
 	if test $(POLLY_ENABLE) = yes; then \
@@ -385,22 +398,22 @@ override_dh_auto_test:
 # LLVM tests
 ifneq (,$(findstring $(DEB_HOST_ARCH),$(ARCH_LLVM_TEST_OK)))
 # Fail the build if the test fails
-	NJOBS="$(NJOBS)" LD_LIBRARY_PATH=$(CURDIR)/$(TARGET_BUILD)/Release/lib/ $(MAKE) -C $(TARGET_BUILD) check
+	NJOBS="$(NJOBS)" LD_LIBRARY_PATH=$(CURDIR)/$(TARGET_BUILD)/$(BUILD_DIR)/lib/ $(MAKE) -C $(TARGET_BUILD) check
 else
-	NJOBS="$(NJOBS)" LD_LIBRARY_PATH=$(CURDIR)/$(TARGET_BUILD)/Release/lib/ $(MAKE) -C $(TARGET_BUILD) check || true
+	NJOBS="$(NJOBS)" LD_LIBRARY_PATH=$(CURDIR)/$(TARGET_BUILD)/$(BUILD_DIR)/lib/ $(MAKE) -C $(TARGET_BUILD) check || true
 endif
 
 # clang tests
 # setup the env
-	cd $(TARGET_BUILD)/Release/lib/ && ln -s libclang.so libclang.so.1 && ln -s libclang.so libclang-$(LLVM_VERSION).so.1
+	cd $(TARGET_BUILD)/$(BUILD_DIR)/lib/ && ln -s libclang.so libclang.so.1 && ln -s libclang.so libclang-$(LLVM_VERSION).so.1
 	cd $(TARGET_BUILD)/ && $(MAKE) -C tools/clang/ test || true
-	rm -f $(TARGET_BUILD)/Release/lib/libclang.so.1 $(TARGET_BUILD)/Release/lib/libclang-$(LLVM_VERSION).so.1
+	rm -f $(TARGET_BUILD)/$(BUILD_DIR)/lib/libclang.so.1 $(TARGET_BUILD)/$(BUILD_DIR)/lib/libclang-$(LLVM_VERSION).so.1
 
 
 # lldb tests
 ifeq (,$(filter $(DEB_HOST_ARCH), $(LLDB_DISABLE_ARCHS) armhf armel))
 	if test $(LLDB_ENABLE) = yes; then \
-	cd $(TARGET_BUILD)/Release/lib/python2.7/site-packages/lldb && if test ! -h _lldb.so -o ! -f _lldb.so; then ln -s ../../../liblldb.so _lldb.so; fi; \
+	cd $(TARGET_BUILD)/$(BUILD_DIR)/lib/python2.7/site-packages/lldb && if test ! -h _lldb.so -o ! -f _lldb.so; then ln -s ../../../liblldb.so _lldb.so; fi; \
 	if test ! -h libLLVM-$(LLVM_VERSION).so.$(SONAME_EXT) -o ! -f _lldb.so; then \
 		ln -s ../../../libLLVM-$(LLVM_VERSION_FULL).so libLLVM-$(LLVM_VERSION).so.$(SONAME_EXT); \
 	fi; \
@@ -409,7 +422,7 @@ ifeq (,$(filter $(DEB_HOST_ARCH), $(LLDB_DISABLE_ARCHS) armhf armel))
 	fi; \
 	fi
 
-	cd $(TARGET_BUILD)/Release/lib && \
+	cd $(TARGET_BUILD)/$(BUILD_DIR)/lib && \
 	rm -f liblldb-$(LLVM_VERSION).so && \
 	ln -s liblldb.so liblldb-$(LLVM_VERSION).so
 
@@ -420,7 +433,7 @@ ifeq (,$(filter $(DEB_HOST_ARCH), $(LLDB_DISABLE_ARCHS) armhf armel))
 endif
 
 # Managed by debian build system
-	rm -f $(CURDIR)/$(TARGET_BUILD)/Release/lib/python*/site-packages/lldb/_lldb.so $(TARGET_BUILD)/Release/lib/liblldb-$(LLVM_VERSION).so
+	rm -f $(CURDIR)/$(TARGET_BUILD)/$(BUILD_DIR)/lib/python*/site-packages/lldb/_lldb.so $(TARGET_BUILD)/$(BUILD_DIR)/lib/liblldb-$(LLVM_VERSION).so
 
 # polly tests
 	if test $(POLLY_ENABLE) = yes; then \
